# ARC

./: .bettercodehub.yml  .buildinfo  .coveragerc  .gitignore  .travis.yml  3.15  AGENTS.md  ARC.py  ARC_test.py  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTRAINT_SCAN_IMPLEMENTATION.md  CONSTRAINT_SCAN_IMPLEMENTATION_STATUS.md  CONSTRAINT_SCAN_USAGE.md  Dockerfile  Fix.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README.rst  TS_search.html  advanced.html  benchmark.py  cite.html  conftest.py  contribute.html  credits.html  delete.py  docker-compose.yml  docker.html  environment.yml  examples.html  genindex.html  how_it_works.html  index.html  input_reference.html  installation.html  licence.html  (+22 more)
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  cont_int.yml  docker_build.yml  gh-pages.yml  labeler.yml  nightly.yml  ruff.yml  update-cache.yml
Functional/: thermoTest.py
_images/: graphviz-5d8f87b97f32888544da70effebe89037fa2e96f.png.map  graphviz-6f4d8564c9a8f88d0029e8d249483cb2babdf1a4.png.map  graphviz-a31e524950488d8626efb52b0a1686fbf615d2af.png.map  graphviz-f54e53a7655203f11410f17e8252057ac52851bd.png.map  graphviz-f7a008c174b2e8c34eb9c19164450c0e4f1c0e25.png.map
_modules/: index.html
_modules/arc/: common.html  level.html  main.html  parser.html  plotter.html  processor.html  reaction.html  rmgdb.html  scheduler.html
_sources/: TS_search.rst.txt  advanced.rst.txt  contribute.rst.txt  credits.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  licence.rst.txt  media.rst.txt  release.rst.txt  tools.rst.txt
_sources/api/: common.rst.txt  conformers.rst.txt  job.rst.txt  local.rst.txt  parser.rst.txt  reaction.rst.txt  rmgdb.rst.txt  ssh.rst.txt  trsh.rst.txt  vectors.rst.txt  zmat.rst.txt
api/: common.html  conformers.html  converter.html  index.html  job.html  level.html  local.html  main.html  parser.html  plotter.html  processor.html  reaction.html  rmgdb.html  scale.html  scheduler.html  species.html  ssh.html  trsh.html  vectors.html  zmat.html
arc/: __init__.py  arc_cli_test.py  arc_exceptions.py  common.py  commonTest.py  common_test.py  constants.pxd  constants.py  exceptions.py  fukui.py  imports.py  level.py  levelTest.py  level_test.py  main.py  mainTest.py  main_test.py  output.py  output_test.py  parser.py  parserTest.py  parser_test.py  plotter.py  plotterTest.py  plotter_test.py  processor.py  processorTest.py  processor_test.py  reaction.py  reactionTest.py  reaction_test.py  restartTest.py  restart_invariants.py  restart_invariants_test.py  rmgdb.py  rmgdbTest.py  rmgdb_test.py  scheduler.py  schedulerTest.py  scheduler_composite_phase_test.py  (+11 more)
arc/checks/: __init__.py  common.py  commonTest.py  common_test.py  nmd.py  nmd_test.py  ts.py  tsTest.py  ts_test.py
arc/ess/: data.py
arc/family/: __init__.py  arc_families_test.py  family.py  family_test.py
arc/job/: __init__.py  adapter.py  adapterTest.py  adapter_test.py  env_run.py  env_run_test.py  factory.py  factory_test.py  input.py  inputs.py  job.py  jobTest.py  local.py  localTest.py  local_test.py  scripts.py  ssh.py  sshTest.py  ssh_pool.py  ssh_test.py  submit.py  submitTest.py  trsh.py  trshTest.py  trsh_test.py  zombie.py  zombie_test.py
arc/level/: __init__.py  cbs.py  cbs_test.py  examples_test.py  legacy_imports_test.py  level.py  level_test.py  presets.py  presets.yml  presets_test.py  protocol.py  protocol_test.py  reporting.py  reporting_test.py  species_state.py  species_state_test.py
arc/mapping/: __init__.py  driver.py  driverTest.py  driver_test.py  engine.py  engineTest.py  engine_test.py
arc/molecule/: __init__.py  adjlist.py  adjlist_test.py  atomtype.pxd  atomtype.py  atomtype_test.py  atomtypedatabase.py  conformer.py  converter.pxd  converter.py  converter_test.py  draw.py  draw_test.py  element.pxd  element.py  element_test.py  filtration.py  filtration_test.py  fragment.py  fragment_test.py  graph.pxd  graph.pyx  graph_test.py  group.pxd  group.py  group_test.py  inchi.pxd  inchi.py  inchi_test.py  kekulize.pyx  kekulize_test.py  molecule.pxd  molecule.py  molecule_test.py  pathfinder.pxd  pathfinder.py  pathfinder_test.py  resonance.pxd  resonance.py  resonance_test.py  (+12 more)
arc/parser/: __init__.py  adapter.py  constraints_test.py  factory.py  parser.py  parser_test.py
arc/provenance/: __init__.py  graph.py  nodes.py  provenance_test.py
arc/reaction/: __init__.py  coordinate.py  coordinate_test.py  family.py  family_test.py  reaction.py  reaction_test.py
arc/scripts/: __init__.py  common.py  libraries.yaml  (+12 more)
data/: AEC.yml  basis_sets.csv  electronegativity.yml  elements.yml  ess_methods.yml  freq_scale_factors.yml  hydrolysis_families_parameters.yml  qa_sn2_parameters.yml  quantum_corrections.py  rxn_normal_mode_disp.yml
devtools/: clean.sh  compile.sh  create_env.sh  create_env_travis.sh  crest_environment.yml  delete.sh  gcn_environment.yml  install_all.sh  install_arc.sh  install_autotst.sh  install_crest.sh  install_gcn.sh  install_gcn_ci.sh  install_gcn_cpu.sh  install_gcn_travis.sh  install_goflow.sh  install_kinbot.sh  install_molecule.sh  install_ob.sh  install_psi4.sh  install_pyrdl.sh  install_rits.sh  install_rmg.sh  install_rmgdb.sh  install_sella.sh  install_torchani.sh  install_uma.sh  install_xtb.sh  lite.sh  ob_environment.yml  sella_environment.yml  tani.yml  tani_environment.yml  uma_environment.yml  xtb_environment.yml
dockerfiles/: alias_print.sh  aliases.sh  aliases_print.sh  entrywrapper.sh
docs/: Makefile  output_yml_schema.md  tckdb-integration.md  tckdb_adapter_current_backend_audit.md  tckdb_arc_payload_coverage_audit.md  tckdb_upload_boundary.md  web_docs_audit.md
functional/: functional_test.py  mockter_thermo_equivalence_test.py  restart_test.py  ts_guess.xyz
ipython/: 1-octene_06_24_2019.ipynb  ARC Demo.ipynb  ARC ESS diagnostics.ipynb  ARC rxn demo using YAML.ipynb  ARC thermo demo.ipynb  call_ts_gen_v2_from_ARC.ipynb  delete all arc jobs.ipynb
logo/: ARC logo.tif
(+645 files in other folders)
