[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "ARC"
dynamic = ["version"]
requires-python = ">=3.14"

[tool.pytest.ini_options]
addopts = "-n auto --dist=worksteal -ra"
testpaths = ["arc", "functional"]
